--- a/css/style.css
+++ b/css/style.css
@@ -164,12 +164,18 @@ button:active {
 
   .mini_logos {
     width: 20%;
-    margin: 2% 4%;
+    margin: -2% 4%;
   }
 
-  .anima {
-    width: 10%;
+  .conhecimento {
+    right: 0;
   }
+  
+  .projeto {
+    left: 0;
+  }
+
+  
 
   select {
     width: 80%;
