--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   background-image: url("../assets/Background.jfif");
 }
 
@@ -137,11 +139,11 @@ button:active {
 
 @media screen and (max-width: 912px) {
   #dados_Aluno {
-    height: 80%;
+    height: 90vh;
   }
 
   .logos {
-    width: 80%;
+    width: 80vw;
   }
 
   input {
@@ -163,7 +165,7 @@ button:active {
   }
 
   .mini_logos {
-    width: 20%;
+    width: 30%;
     margin: -2% 4%;
   }
 
