--- a/css/style.css
+++ b/css/style.css
@@ -162,12 +162,12 @@ button:active {
 
   .logo {
     width: 100%;
-    margin-bottom: 5%;
+    margin-bottom: 50px;
   }
 
   .mini_logos {
     width: 30%;
-    margin: -2% 1%;
+    margin: -2%;
   }
 
   .conhecimento {
