--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,8 @@ button:active {
   }
 
   .mini_logos {
-    width: 30%;
-    margin: -2%;
+    width: 40%;
+    margin: -2% 2%;
   }
 
   .conhecimento {
