--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,8 @@ button:active {
     height: 80vh;
   }
 
-  .logos {
-    width: 80vw;
+  .logo {
+    margin-bottom: 50px;
   }
 
   input {
@@ -162,7 +162,7 @@ button:active {
 
   .mini_logos {
     width: 40%;
-    margin: -2% 5%;
+    margin: -2% 4%;
   }
 
   .conhecimento {
