--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,11 @@ button:active {
   }
 
   .logo {
-    margin-bottom: 5%;
+    margin-bottom: 15%;
+  }
+  
+  .logos {
+    margin-bottom: 15%;
   }
 
   input {
@@ -162,7 +166,7 @@ button:active {
 
   .mini_logos {
     width: 40%;
-    margin: -2% 3%;
+    margin: -2% 1%;
   }
 
   .conhecimento {
